Make nicer footer

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -68,7 +68,8 @@ div#what {
 </div>
 <p>
 <small i18n:msg="">Data last generated on</small> <small><xi:include href='../html/timestamp.html' /></small><br />
-<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small>
+<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small><br />
+<small i18n:msg="">Hosting kindly provided by</small> <small><a href="http://www.gplhost.com/">GPLHost</a></small>
 </p>
 <xi:include href='../html/footer.html' />
 </body>
