--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -121,7 +121,8 @@ ${showval(val, vals[val])}
 <p>
 <small i18n:msg="">Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small><br />
 <small i18n:msg="">Data last generated on</small> <small><xi:include href='../html/timestamp.html' /></small><br />
-<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small>
+<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small><br />
+<small i18n:msg="">Hosting kindly provided by</small> <small><a href="http://www.gplhost.com/">GPLHost</a></small>
 </p>
 <xi:include href='../html/footer.html' />
 </body>
