--- a/views/user.tmpl
+++ b/views/user.tmpl
@@ -32,7 +32,8 @@
 <h1>OpenStreetMap Statistics</h1>
 <h2 i18n:msg="user">User profile: ${user}</h2>
 <img src="${imgurl}" /><br /><br />
-<small><a href='javascript:history.go(-1);'>Go back</a> &mdash; <a href='#' onclick='expandall();'>Expand all</a></small>
+<small><a href='javascript:history.go(-1);'>Go back</a> &mdash; <a href='#' onclick='expandall();'>Expand all</a></small><br />
+<a href='http://yosmhm.neis-one.org/?${user}' target='_blank'>HeatMap</a><br />
 <ul id="links" style="padding: 0px">
 <py:for each="name in ['Nodes', 'Ways', 'Relations']">
 <py:choose test="">
