More links to the heatmap

--- a/views/table.tmpl
+++ b/views/table.tmpl
@@ -62,6 +62,7 @@
   <td>
     <a href="http://www.openstreetmap.org/user/${pair[0]}" style="text-decoration:none;">${pair[0]}</a>
     <a href="/user/${prefix}/${pair[0]}"><img src='/img/profile.png' /></a>
+    <a href="http://yosmhm.neis-one.org/?${pair[0]}" target="_blank">H</a>
   </td>
   <td align="right">${pair[1]}</td>
 </tr>
